# treegen

./: Cargo.toml  README.md  README_en.md
.github/workflows/: build.yml
example/: README.md  tree.json  tree.json5  tree.md  tree.toml  tree.yaml  tree.yml
src/: main.rs
